--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   dbt_scooters:
+    +materialized: table
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+    # example:
+    #  +materialized: table
